objects/vlocity_ins__QuoteItemRelationship__c.object
<CustomObject>
    <description>Tracks many-to-many relationships between quote line items such as the relationships between one or more vehicles and one or more drivers on an auto insurance quote.</description>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ChildQuoteLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Item Relationships (Child Quote Line Item)</relationshipLabel>
        <relationshipName>ChildQuoteItemRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentQuoteLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Item Relationships</relationshipLabel>
        <relationshipName>ParentQuoteItemRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quote Item Relationship</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Item Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>